--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
 		"@aws-sdk/client-s3": "^3.266.1",
 		"body-parser": "^1.20.0",
 		"chai-http": "^4.3.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"mongoose": "^6.5.2",
 		"multer": "^1.4.5-lts.1",
