--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
         build: "./"
         ports:
             - 3000:3000
+        volumes:
+            - ./:/usr/app
+            - /usr/app/node_modules
+        stdin_open: true
     api:
         container_name: "api"
         depends_on:
@@ -18,6 +22,9 @@ services:
         build: "./api"
         ports:
             - 3010:3010
+        volumes:
+            - ./api:/usr/api
+            - /usr/api/node_modules
     mongo-seed:
         depends_on:
             - mongodb
