multer fixed for now, still need to add AWS stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             - mongodb
         environment:
             MONGO_IP: mongodb
+            bucket_name: "testBucket"
         restart: "always"
         build: "./api"
         ports:
