--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "mongoose": "^6.9.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-simple-widgets": "^6.7.0",
     "sass": "^1.58.0",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
