--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
     "scss": "^0.2.4",
