--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
         container_name: "app"
         depends_on:
             - api
+        environment:
+            - API_IP: "localhost"
         restart: "always"
         build: "./"
         ports:
